--- a/PulsarTestTask/PulsarTestTask.csproj
+++ b/PulsarTestTask/PulsarTestTask.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.0" />
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.3.0" />
     <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
+    <PackageReference Include="ReactiveUI.Validation" Version="4.1.1" />
   </ItemGroup>
 
   <ItemGroup>
